--- a/showcases.html
+++ b/showcases.html
@@ -35,12 +35,18 @@
 
 <!-- CSS FILES -->
 <link rel="stylesheet" href="css/fontawesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 <link rel="stylesheet" href="css/fancybox.min.css">
 <link rel="stylesheet" href="css/hamburger.min.css">
 <link rel="stylesheet" href="css/odometer.min.css">
 <link rel="stylesheet" href="css/swiper.min.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/style.css">
+
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;700;1000&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="preloader">
@@ -57,58 +63,27 @@
   <!-- end layer --> 
 </div>
 <!-- end page-transition -->
-<nav class="site-navigation">
+<nav class="site-navigation ar lava-font">
   <div class="layer"></div>
   <!-- end layer -->
   <div class="inner">
-    <ul data-splitting>
-      <li><a href="index.html">HOME</a><i class="fas fa-caret-down"></i> <small>First page</small>
-      <ul>
+    <ul >
+      <li><a href="index.html">الصفحة الرئيسيه</a> 
+      <!-- <ul>
       	<li><a href="index.html">HOME SLIDER</a></li>
       	<li><a href="index-video.html">HOME VIDEO</a></li>
       	<li><a href="index-carousel.html">HOME CAROUSEL</a></li>
-      </ul>
+      </ul> -->
         </li>
-      <li><a href="studio.html">STUDIO</a> <small>All About Us</small> </li>
-      <li><a href="showcases.html">SHOWCASES</a> <small>Our all projects</small> </li>
-      <li><a href="blog.html">BLOG</a> <small>Recent posts</small> </li>
-      <li><a href="contact.html">CONTACT</a> <small>Say hello</small> </li>
+      <!-- <li><a href="studio.html">STUDIO</a> <small>All About Us</small> </li> -->
+      <li><a href="#">القائمة</a> 
+      <!-- <li><a href="blog.html">BLOG</a> <small>Recent posts</small> </li> -->
+      <li><a href="contact.html">تواصل معنا</a> 
     </ul>
   </div>
   <!-- end inner --> 
 </nav>
 <!-- end site-navigation -->
-<div class="social-media">
-  <div class="layer"> </div>
-  <!-- end layer -->
-  <div class="inner">
-    <h5>Social Share </h5>
-    <ul>
-      <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-      <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-      <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-    </ul>
-  </div>
-</div>
-<!-- end social-media -->
-<div class="all-cases">
-  <div class="layer"> </div>
-  <!-- end layer -->
-  <div class="inner">
-    <ul>
-      <li><a href="#">Darkness</a></li>
-      <li><a href="#">Goddes</a></li>
-      <li><a href="#">Employee</a></li>
-      <li><a href="#">Berry</a></li>
-      <li><a href="#">Roosters</a></li>
-      <li><a href="#">Primero</a></li>
-    </ul>
-  </div>
-  <!-- end inner --> 
-</div>
-<!-- end all-cases -->
 <main>
   <aside class="left-side">
     <div class="logo"> <a href="index.html"><img src="images/logo.png" alt="Image"></a> </div>
@@ -131,13 +106,13 @@
       </div>
     </div>
     <!-- end hamburger -->
-    <div class="follow-us"> FOLLOW US </div>
+    <!-- <div class="follow-us"> FOLLOW US </div> -->
     <!-- end follow-us -->
-    <div class="equalizer"> <span></span> <span></span> <span></span> <span></span> </div>
+    <!-- <div class="equalizer"> <span></span> <span></span> <span></span> <span></span> </div> -->
     <!-- end equalizer --> 
   </aside>
   <!-- end left-side -->
-  <div class="all-cases-link"> <span>ALL CASES</span> <b>+</b> </div>
+  
   <!-- end all-cases-link -->
   <header class="page-header">
   <div class="video-bg">
@@ -252,26 +227,22 @@
   <!-- end clients --> 
 </main>
 <!-- end main -->
-<footer class="footer">
+<footer class="footer ar lava-font">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <ul>
-          <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-          <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-          <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100093532436539"><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="https://www.tiktok.com/@shawaya80?lang=en"><i class="fab fa-tiktok"></i></a></li>
+          <li><a href="https://www.instagram.com/shawaya.80/"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="https://www.snapchat.com/add/shawayaa80?share_id=XdZuOHgN0FA&locale=en-US"><i class="fab fa-snapchat"></i></a></li>
         </ul>
-        <h6>LET’S HAVE A TALK ABOUT YOUR PROJECT.</h6>
-        <h2>Need more information or want <br>
-          to get in touch?</h2>
-        <a href="#" class="link">Get in touch</a> </div>
+        <h6 class="lava-font">عنوان عربي</h6>
+        <h2>عنوان عربي <br>
+          عنوان عربي</h2>
+        <a href="#" class="link">تواصل معنا </a> </div>
       <!-- end col-12 -->
-      <div class="col-12">
-        <div class="footer-bar"> <span class="copyright">© 2022 Tourog | All Rights Reserved</span> <span class="creation">Site created by <a href="#">Themezinho</a></span> </div>
-        <!-- end footer-bar --> 
-      </div>
+      
       <!-- end col-12 --> 
     </div>
     <!-- end row --> 
