--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,8 @@
 <link href="ico/apple-touch-icon-72-precomposed.png" rel="apple-touch-icon" sizes="72x72">
 <link href="ico/apple-touch-icon-57-precomposed.png" rel="apple-touch-icon">
 <link href="ico/favicon.png" rel="shortcut icon">
+<link rel="stylesheet" href="css/fontawesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 <!-- CSS FILES -->
 <link rel="stylesheet" href="css/fontawesome.min.css">
@@ -53,8 +55,8 @@
   <div class="layer"></div>
   <!-- end layer -->
   <div class="inner">
-    <figure> <img src="images/preloader.gif" alt="Image"> </figure>
-    <span>Site Loading</span> </div>
+    <figure> <img src="images/logo.png" alt="Image"> </figure>
+  </div>
   <!-- end inner --> 
 </div>
 <!-- end preloader -->
@@ -112,127 +114,54 @@
     <!-- end equalizer --> 
   </aside>
   <!-- end left-side -->
-  
   <!-- end all-cases-link -->
-  <header class="page-header">
-  <div class="video-bg">
-  	<video src="videos/video02.mp4" muted loop autoplay></video>
-  </div>
-  <!-- end video-bg -->
-  <div class="inner " style="padding-left:0px;">
-  	<div class="container lava-font text-center" >
-  		<h1>تواصل معنا</h1>
-  		<p class="cairo-font">وريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور
-        أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا .</p>
-  	</div>
-  	<!-- end container -->
-  </div>
-  <!-- end inner -->
-  </header>
-  <!-- end page-header -->
-	 <section class="contact">
+	<section class="contact">
     <div class="container">
-    	<div class="row">
-    	<div class="col-lg-5">
-    		<h3 class="section-title">SAY HELLO <br>TO REACH US</h3>
-    	</div>
-    	<!-- end col-5 -->
-    	<div class="col-lg-4 col-md-6">
-    		<h6>HEAD OFFICE</h6>
-    		<address>
-    			Boryssa Himry 124 B Block Pozniaky<br>
-Kiev - UKRAINE
-    		</address>
-    	</div>
-    	<!-- end col-4 -->
-    	<div class="col-lg-3 col-md-6">
-    		<h6>REACH US</h6>
-    		<address>
-    			<p>+38 02 237 24 21</p>
-    			<a href="#">hello@tourog.com.ua</a>
-    		</address>
-    	</div>
-    	<!-- end col-3 -->
-    	<div class="col-lg-5">
-    		 <div class="map">
-    			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d325518.68780316407!2d30.252511957059642!3d50.4016990487754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf4ee15a4505%3A0x764931d2170146fe!2z0JrQuNGX0LIsINCj0LrRgNCw0ZfQvdCwLCAwMjAwMA!5e0!3m2!1suk!2str!4v1555663203384!5m2!1suk!2str"></iframe>
-    		</div>
-    		<!-- end map -->
-    	</div>
-    	<!-- end col-5 -->
-    	<div class="col-lg-7">
-    		<div class="contact-form">
-			 <form id="contact" name="contact" method="post">
-          <div class="form-group">
-            <input type="text" name="name" id="name" autocomplete="off" required>
-             <span>Your name</span>
+    	<div class="row" style="color:white">
+      	<div class="map-container">
+          <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d325518.68780316407!2d30.252511957059642!3d50.4016990487754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf4ee15a4505%3A0x764931d2170146fe!2z0JrQuNGX0LIsINCj0LrRgNCw0ZfQvdCwLCAwMjAwMA!5e0!3m2!1suk!2str!4v1555663203384!5m2!1suk!2str"></iframe>
           </div>
-          <!-- end form-group -->
-          <div class="form-group"> 
-            <input type="text" name="email" id="email" autocomplete="off" required>
-            <span>Your e-mail</span>
-          </div>
-          <!-- end form-group -->
-          <div class="form-group"> 
-            <input type="text" name="subject" id="subject" autocomplete="off" required>
-            <span>Subject</span>
-          </div>
-          <!-- end form-group -->
-          <div class="form-group"> 
-            <textarea name="message" id="message" autocomplete="off" required></textarea>
-            <span>Your message</span>
-          </div>
-          <!-- end form-group -->
-          <div class="form-group">
-            <button id="submit" type="submit" name="submit">
-<strong>Submit Now<b></b> <i></i></strong>
-         </button>
-          </div>
-          <!-- end form-group -->
-        </form>
-        <!-- end form --> 
-         <div class="form-group">
-          <div id="success" class="alert alert-success" role="alert"> Your message was sent successfully! We will be in touch as soon as we can. </div>
-        <!-- end success -->
-        <div id="error" class="alert alert-danger" role="alert"> Something went wrong, try refreshing and submitting the form again. </div>
-        <!-- end error --> 
+          <!-- end map -->
         </div>
-        <!-- end form-group -->
+
+        <div class="contact-us">
+          <div>
+            <h6 style="color:#e20519">العنوان</h6>
+            <address>
+              Boryssa Himry 124 B Block Pozniaky<br>
+              Kiev - UKRAINE
+            </address>
+          </div>
+          <!-- end col-4 -->
+          <div>
+            <h6 style="color:#e20519">تواصل معنا</h6>
+            <address>
+              <p>+38 02 237 24 21</p>
+              <a href="#">hello@tourog.com.ua</a>
+            </address>
+          </div>
         </div>
-        <!-- end contact-form -->
-    	</div>
-    	<!-- col-7 -->
-    	</div>
-    	<!-- end row -->
+        <div class="links">
+          <ul>
+            <li><a href="https://www.facebook.com/profile.php?id=100093532436539"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://www.tiktok.com/@shawaya80?lang=en"><i class="fab fa-tiktok"></i></a></li>
+            <li><a href="https://www.instagram.com/shawaya.80/"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.snapchat.com/add/shawayaa80?share_id=XdZuOHgN0FA&locale=en-US"><i class="fab fa-snapchat"></i></a></li>
+          </ul>
+        </div>
+        <div class="copyright">
+          © All Right Reserved to RASANS 2023
+        </div>
+        <!-- end col-5 -->
+      </div>
+        <!-- end row -->
     </div>
     <!-- end container -->
   </section>
   <!-- end blog -->
 </main>
 <!-- end main -->
-<footer class="footer ar lava-font">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <ul>
-          <li><a href="https://www.facebook.com/profile.php?id=100093532436539"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href="https://www.tiktok.com/@shawaya80?lang=en"><i class="fab fa-tiktok"></i></a></li>
-          <li><a href="https://www.instagram.com/shawaya.80/"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="https://www.snapchat.com/add/shawayaa80?share_id=XdZuOHgN0FA&locale=en-US"><i class="fab fa-snapchat"></i></a></li>
-        </ul>
-        <h6 class="lava-font">عنوان عربي</h6>
-        <h2>عنوان عربي <br>
-          عنوان عربي</h2>
-        <a href="#" class="link">تواصل معنا </a> </div>
-      <!-- end col-12 -->
-      
-      <!-- end col-12 --> 
-    </div>
-    <!-- end row --> 
-  </div>
-  <!-- end container --> 
-</footer>
-<!-- end footer -->
 
 <!-- JS FILES --> <script src="js/jquery.min.js"></script> 
 <script src="js/bootstrap.min.js"></script> 
