--- a/showcases.html
+++ b/showcases.html
@@ -116,12 +116,12 @@
   <!-- end all-cases-link -->
   <header class="page-header page-header-50">
   <div class="video-bg">
-  	<video src="videos/video02.mp4" muted loop autoplay></video>
+  	<img src="images/2.jpg">
   </div>
   <!-- end video-bg -->
   <div class="inner padding-0">
   	<div class="container ar">
-  		<h1 style="text-align: center;color:#e20519;">القائمة</h1>
+  		<h1 style="text-align: center;">القائمة</h1>
   	</div>
   	<!-- end container -->
   </div>
