--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="format-detection" content="telephone=no">
 <meta name="theme-color" content="#75dab4"/>
-<title>Tourog | Creative Agensy for Digital Age</title>
+<title>تواصل معنا</title>
 <meta name="author" content="Themezinho">
 <meta name="description" content="Tourog | Creative Agensy for Digital Age">
 <meta name="keywords" content="creative, works, showcase, portfolio, highlight, projects, modern, tourog, digital, studio, css, animation, transition, freelancers">
@@ -129,16 +129,15 @@
           <div>
             <h6 style="color:#e20519">العنوان</h6>
             <address>
-              Boryssa Himry 124 B Block Pozniaky<br>
-              Kiev - UKRAINE
+              الرياض حي العارض شارع نعيم بن عبد لله
             </address>
           </div>
           <!-- end col-4 -->
           <div>
             <h6 style="color:#e20519">تواصل معنا</h6>
             <address>
-              <p>+38 02 237 24 21</p>
-              <a href="#">hello@tourog.com.ua</a>
+              <a href="tel:+966 56 169 8080">+966 56 169 8080</a><br>
+              <a href="mailto:info@goldendealksa.com">info@goldendealksa.com</a>
             </address>
           </div>
         </div>
