--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,12 @@
 <meta name="twitter:image" content="http://www.themezinho.net/tourog/preview.png">
 
 <!-- FAVICON FILES -->
-<link href="ico/apple-touch-icon-144-precomposed.png" rel="apple-touch-icon" sizes="144x144">
-<link href="ico/apple-touch-icon-114-precomposed.png" rel="apple-touch-icon" sizes="114x114">
-<link href="ico/apple-touch-icon-72-precomposed.png" rel="apple-touch-icon" sizes="72x72">
-<link href="ico/apple-touch-icon-57-precomposed.png" rel="apple-touch-icon">
+<link href="ico/favicon.png" rel="apple-touch-icon" sizes="144x144">
+<link href="ico/favicon.png" rel="apple-touch-icon" sizes="114x114">
+<link href="ico/favicon.png" rel="apple-touch-icon" sizes="72x72">
+<link href="ico/favicon.png" rel="apple-touch-icon">
 <link href="ico/favicon.png" rel="shortcut icon">
+
 <link rel="stylesheet" href="css/fontawesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
