--- a/showcases.html
+++ b/showcases.html
@@ -27,7 +27,11 @@
 <meta name="twitter:image" content="http://www.themezinho.net/tourog/preview.png">
 
 <!-- FAVICON FILES -->
-<link rel="icon" type="image/x-icon" href="ico/favicon.png">
+<link href="ico/favicon.png" rel="apple-touch-icon" sizes="144x144">
+<link href="ico/favicon.png" rel="apple-touch-icon" sizes="114x114">
+<link href="ico/favicon.png" rel="apple-touch-icon" sizes="72x72">
+<link href="ico/favicon.png" rel="apple-touch-icon">
+<link href="ico/favicon.png" rel="shortcut icon">
 
 <!-- CSS FILES -->
 <link rel="stylesheet" href="css/fontawesome.min.css">
