--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!-- end layer -->
   <div class="inner">
     <ul >
-      <li><a href="#"><h1>الصفحة الرئيسيه</h1></a> 
+      <li><a href="#"><h1>الصفحة الرئيسية</h1></a> 
       <!-- <ul>
       	<li><a href="index.html">HOME SLIDER</a></li>
       	<li><a href="index-video.html">HOME VIDEO</a></li>
@@ -147,7 +147,7 @@
     <div class="container">
       <div class="row column ar">
         <div class="col-lg-5 wow text-center full-width" >
-          <h3 class="section-title ">تجربة لا مثيل لها</h3>
+          <h3 class="section-title ">تجربة&nbsp;<span style="color:#ffca08">لا مثيل لها </span></h3>
         </div>
         <!-- end col-5 -->
         <div class="col-lg-7 wow verical-center" >
