--- a/showcases.html
+++ b/showcases.html
@@ -68,7 +68,7 @@
   <!-- end layer -->
   <div class="inner">
     <ul >
-      <li><a href="index.html">الصفحة الرئيسيه</a> 
+      <li><a href="index.html">الصفحة الرئيسية</a> 
       <!-- <ul>
       	<li><a href="index.html">HOME SLIDER</a></li>
       	<li><a href="index-video.html">HOME VIDEO</a></li>
