--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
   <!-- end layer -->
   <div class="inner">
     <ul >
-      <li><a href="index.html">الصفحة الرئيسيه</a> 
+      <li><a href="index.html">الصفحة الرئيسية</a> 
       <!-- <ul>
       	<li><a href="index.html">HOME SLIDER</a></li>
       	<li><a href="index-video.html">HOME VIDEO</a></li>
