--- a/contact.html
+++ b/contact.html
@@ -119,6 +119,7 @@
 	<section class="contact">
     <div class="container">
     	<div class="row" style="color:white">
+        <h1>تواصل معنا</h1>
       	<div class="map-container">
           <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d325518.68780316407!2d30.252511957059642!3d50.4016990487754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf4ee15a4505%3A0x764931d2170146fe!2z0JrQuNGX0LIsINCj0LrRgNCw0ZfQvdCwLCAwMjAwMA!5e0!3m2!1suk!2str!4v1555663203384!5m2!1suk!2str"></iframe>
@@ -135,7 +136,7 @@
           </div>
           <!-- end col-4 -->
           <div>
-            <h6 style="color:#e20519">تواصل معنا</h6>
+            <h6 style="color:#e20519">اتصل بنا</h6>
             <address>
               <a href="tel:+966 56 169 8080">+966 56 169 8080</a><br>
               <a href="mailto:info@goldendealksa.com">info@goldendealksa.com</a>
