--- a/contact.html
+++ b/contact.html
@@ -138,17 +138,17 @@
           <div>
             <h6 style="color:#e20519">اتصل بنا</h6>
             <address>
-              <a href="tel:+966 56 169 8080">+966 56 169 8080</a><br>
-              <a href="mailto:info@goldendealksa.com">info@goldendealksa.com</a>
+              <a href="tel:+966 56 169 8080" target="_blank">+966 56 169 8080</a><br>
+              <a href="mailto:info@goldendealksa.com"target="_blank">info@goldendealksa.com</a>
             </address>
           </div>
         </div>
         <div class="links">
           <ul>
-            <li><a href="https://www.facebook.com/profile.php?id=100093532436539"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="https://www.tiktok.com/@shawaya80?lang=en"><i class="fab fa-tiktok"></i></a></li>
-            <li><a href="https://www.instagram.com/shawaya.80/"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.snapchat.com/add/shawayaa80?share_id=XdZuOHgN0FA&locale=en-US"><i class="fab fa-snapchat"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100093532436539" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://www.tiktok.com/@shawaya80?lang=en" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+            <li><a href="https://www.instagram.com/shawaya.80/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.snapchat.com/add/shawayaa80?share_id=XdZuOHgN0FA&locale=en-US" target="_blank"><i class="fab fa-snapchat"></i></a></li>
           </ul>
         </div>
         <div class="copyright">
