add photos to menu

--- a/showcases.html
+++ b/showcases.html
@@ -127,6 +127,9 @@
   <!-- end page-header -->
   <section class="menu ar" style="color:white">
     <div class="section">
+        <div style = "max-width:400px" class="image">
+          <img src="images/Chicken.png">
+        </div>
         <div class="title">
           <span>
             <h1>الدجاج</h1>
@@ -241,6 +244,9 @@
       </div>  
   </div>
     <div class="section">
+        <div class="image">
+          <img src="images/pasta.png">
+        </div>
         <div class="title">
             <h1>المكرونة</h1>
         </div>
@@ -257,6 +263,9 @@
     </div>
 
     <div class="section">
+      <div class="image">
+        <img src="images/rice.png">
+      </div>
       <div class="title">
           <h1>الارز</h1>
       </div>
@@ -280,6 +289,9 @@
     </div>
 
   <div class="section">
+    <div class="image">
+      <img src="images/snacks.png">
+    </div>
     <div class="title">
         <h1>مقبلات</h1>
     </div>
@@ -303,6 +315,9 @@
     </div>
   </div>
   <div class="section">
+    <div class="image">
+      <img src="images/edamat.png">
+    </div>
     <div class="title">
         <h1>الايدامات</h1>
     </div>
@@ -336,6 +351,9 @@
   </div>
 
   <div class="section">
+    <div class="image">
+      <img src="images/drinks.png">
+    </div>
     <div class="title">
         <h1>المشروبات</h1>
     </div>
@@ -370,6 +388,9 @@
   </div>
 
   <div class="section">
+    <div class="image">
+      <img src="images/dessert.png">
+    </div>
     <div class="title">
         <h1>الحلي</h1>
     </div>
@@ -384,6 +405,9 @@
   </div>
   
   <div class="section">
+    <div class="image">
+      <img src="images/sause.png">
+    </div>
     <div class="title">
         <h1>الصوصات</h1>
     </div>
