--- a/showcases.html
+++ b/showcases.html
@@ -136,10 +136,10 @@
           </span>
           <span class="subtitle"> 
             <span>
-              نص حبايه
+              نص حبه
             </span>
             <span>
-              حبايه
+              حبه
             </span>
           </span>
         </div>
@@ -194,10 +194,10 @@
           </span>
           <span class="subtitle"> 
             <span>
-              نص حبايه
+              نص حبه
             </span>
             <span>
-              حبايه
+              حبه
             </span>
           </span>
       </div>
@@ -416,7 +416,7 @@
       </div>
       <div class="item">
           <span class="name ">
-              كريم كرامل
+              كريم كراميل
           </span>
           <span class="price">
               7
